# xplorer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SETUP.md  config.toml.example  docker-compose.yml
.github/workflows/: deploy.yml  rust.yml
src/: bot.rs  commands.rs  config.rs  lib.rs  main.rs
src/collectors/: arxiv.rs  example.rs  mod.rs
tests/: collector_tests.rs
