[package]
name = "xplorer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = "0.4"
tokio-cron-scheduler = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
quick-xml = { version = "0.31", features = ["serialize"] }

[profile.release]
opt-level = 3
lto = true
